[Forest] build system skeleton

--- a/tree/CMakeLists.txt
+++ b/tree/CMakeLists.txt
@@ -2,3 +2,4 @@ add_subdirectory(tree)        # special CMakeLists.txt
 add_subdirectory(treeplayer)  # special CMakeLists.txt
 add_subdirectory(treeviewer)  # special CMakeLists.txt
 add_subdirectory(dataframe)  # special CMakeLists.txt
+add_subdirectory(forest)      # special CMakeLists.txt
